--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_ahorrolibre"
+        android:icon="@mipmap/ic_al"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
